--- a/themes/mt32/theme.toml
+++ b/themes/mt32/theme.toml
@@ -4,12 +4,12 @@
 name = "mt32"
 license = "MIT"
 licenselink = "https://github.com/yourname/yourtheme/blob/master/LICENSE"
-description = "A sleek theme!"
+description = "A vibrant theme!"
 homepage = "http://example.com/"
 tags = ["monospace"]
 features = []
-min_version = "0.41.0"
+min_version = "0.72.0"
 
 [author]
   name = "mtorials"
-  homepage = "mtorials.de"
+  homepage = "https://mtorials.de"
