--- a/themes/mt32/theme.toml
+++ b/themes/mt32/theme.toml
@@ -5,7 +5,7 @@ name = "mt32"
 license = "MIT"
 licenselink = "https://github.com/yourname/yourtheme/blob/master/LICENSE"
 description = "A vibrant theme!"
-homepage = "http://example.com/"
+homepage = "http://mt32.net.com/"
 tags = ["monospace"]
 features = []
 min_version = "0.72.0"
